# DiscoRS

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: handlers.rs  main.rs
src/admin/: register.rs
src/music/: info.rs  mod.rs  play.rs  queue.rs  skip.rs  stop.rs
src/utils/: checks.rs
